src/n8n-nodes-airlock/jest-output.txt
FAIL __tests__/mappers.test.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation, specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\repos\personalgit\airlock\gateway_sdk\src\typescript\dist\index.js:1
    export { canonicalizeJson } from "./canonical-json.js";
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    > 1 | import { AirlockGatewayError } from '@airlockapp/gateway-sdk';
        | ^
      2 |
      3 | export type ConsentStatus = 'approved' | 'required' | 'pending' | 'denied' | 'unknown';
      4 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1314:40)
      at Object.<anonymous> (utils/consentNormalizer.ts:1:1)
      at Object.<anonymous> (__tests__/mappers.test.ts:1:1)

PASS __tests__/credential.test.ts

Test Suites: 1 failed, 1 passed, 2 total
Tests:       3 passed, 3 total
Snapshots:   0 total
Time:        3.489 s
Ran all test suites.
